--- a/src/styles.css
+++ b/src/styles.css
@@ -23,3 +23,13 @@ textarea {
 label > span {
   display: block;
 }
+
+.react-tagsinput-tag {
+  background: #eee;
+  padding: 6px 10px;
+  margin: 0 6px 0 0;
+}
+.react-tagsinput-input {
+  margin-top: 1rem;
+  display: block;
+}
