--- a/fresh/src/styles.css
+++ b/fresh/src/styles.css
@@ -1,4 +1,4 @@
-input,
+/* input,
 select,
 textarea {
   background-color: transparent;
@@ -32,4 +32,4 @@ label > span {
 .react-tagsinput-input {
   margin-top: 1rem;
   display: block;
-}
+} */
